<?xml version="1.0" encoding="utf-8"?><!--
  Copyright 2017 Google Inc.

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/listgrad"
    tools:context="com.example.wildtracer.MainActivity">


    <Button
        android:id="@+id/button_call"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/mybutton"
        android:text="@string/emergency_call"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:icon="@android:drawable/ic_menu_call"
        app:layout_constraintBottom_toTopOf="@+id/choose_loc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_location"
        app:layout_constraintVertical_bias="0.03" />

    <Button
        android:id="@+id/button_map"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_marginStart="@dimen/left_margin"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:text="@string/show_map"
        android:textSize="16sp"
        android:textColor = "#FFFFFF"
        android:background="@drawable/mybutton"
        app:icon="@android:drawable/ic_menu_mapmode"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/choose_loc"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/choose_loc"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/right_margin"
        android:layout_marginBottom="16dp"
        android:onClick="NewLocation"
        android:text="@string/choose_location"
        android:textSize="16sp"
        android:textColor = "#FFFFFF"
        android:background="@drawable/mybutton"
        app:icon="@android:drawable/ic_dialog_info"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="UsingOnClickInXml" />

    <ImageView
        android:id="@+id/imageview_android"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/margin"
        android:contentDescription="@string/android_image"
        app:layout_constraintBottom_toTopOf="@+id/guide_image_portrait"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_logo"
        tools:ignore="VectorDrawableCompat" />

    <Button
        android:id="@+id/button_location"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/left_margin"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/emergencybutton"
        android:text="@string/start_tracking_location"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:backgroundTint="@color/colorEmergency"
        app:icon="@android:drawable/ic_menu_myplaces"
        app:layout_constraintBottom_toTopOf="@+id/button_map"
        app:layout_constraintEnd_toStartOf="@+id/button_call"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_location"
        app:layout_constraintVertical_bias="0.625" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="button_location, button_map, choose_loc" />

    <TextView
        android:id="@+id/textview_location"
        android:layout_width="287dp"
        android:layout_height="139dp"
        android:layout_margin="@dimen/margin"
        android:layout_marginLeft="4dp"
        android:fontFamily="@font/solaimanlipi"
        android:gravity="center"
        android:text="@string/textview_hint"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textSize="24sp"
        app:layout_constraintHorizontal_bias="0.64"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageview_android" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_image_portrait"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="338dp" />

</androidx.constraintlayout.widget.ConstraintLayout>